bmt-auth/bmt-auth_v1_Service_rauthy.yaml
apiVersion: v1
kind: Service
metadata:
  name: rauthy
  namespace: bmt-auth
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: rauthy
