bmt-auth/bmt-auth_networking.k8s.io-v1_Ingress_rauthy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: rauthy-ingress
  namespace: bmt-auth
spec:
  rules:
  - host: id.berkeley.mt
    http:
      paths:
      - backend:
          service:
            name: rauthy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - id.berkeley.mt
    secretName: rauthy-ingress-tls
